fix(list): Don't wrap secondary buttons in a button.
We currently wrap many `.md-secondary` items in an extra button
for accessibility purposes. However, there is no need to wrap an
existing button inside an additional one as it creates odd
behavior and styling.

Additionally, fix some styles so that secondary buttons render
properly (position was off due to margins).

Lastly, add some new demo code to show how to use this functionality.

Fixes #3176. Closes #5721

--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -171,15 +171,15 @@ md-list-item, md-list-item .md-list-item-inner {
 
   .md-secondary-container,
   .md-secondary {
-    margin-left: $list-item-secondary-left-margin;
     position: absolute;
-    right: $list-item-padding-horizontal;
     top: 50%;
+    right: $list-item-padding-horizontal;
+    margin: 0 0 0 $list-item-secondary-left-margin;
     transform: translate3d(0, -50%, 0);
   }
 
   & > .md-button.md-secondary-container > .md-secondary {
-    margin-left: 0px;
+    margin-left: 0;
     position: static;
   }
 
